# planejador_de_cardapio

./: README.md  main.py  main_2.py  main_3.py  pyproject.toml  rascunho.py
