[tool.poetry]
name = "planejador-de-cardapio"
version = "0.1.0"
description = ""
authors = ["Gilson <gilsoncruz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"